*** 20010609_4 by db
submitted by Walter Campbell
- igore of bogus TS should be in version string



*** 20010609_3 by jdc
* Removal of cipher priority information for config.h.  This isn't
  applicable anymore.



*** 20010609_2 by jdc
* Forgot to remove one extra line due to previous debugging session
  with Hwy.  Line 452 needed to be deleted.  Oops.



*** 20010609_1 by jdc
- Fixes for cipher autoselection.  Order of ciphers was wrong; they
  were being tested in order of best ("most secure") to worst.  The
  last match is always picked, which would've been DES/56 on most
  systems.
- BF/256 and BF/128 would've never been made available; #ifdef was actually
  a #ifndef (s_crypt.h).  Oops.



*** 20010608_3 by db
From Walter Campbell

1.  Updated example.conf for the cryptlinks patch
2.  Fixed a compilation issue with the bogus TS patch
3.  Cleaned up the make depend's
4.  Fixed a core with CRYPT_LINKS and INFO
5.  Use /dev/urandom for the random block in mkkeypair, this is not quite
    as secure, but works on almost all systems
6.  Updated .depend
7.  Changed the patchlevel to 6.1b1



*** 20010608_2 by kreator
- oops, forgot to do the same with config.h.dist as with config.h


*** 20010608_1 by kreator
- add simple support for EGD seeding of OpenSSL PRNG


*** 20010607_5 by db
Another patch from Walter Campbell

1.  Major cleanup of example.conf
2.  Fixed a couple minor bugs with config.h
3.  Spell checked misc files




*** 20010607_4 by db
- forgot to add this file for Walter



*** 20010607_3 by kreator
- fixed setup.h that had wrong EVP stuff
- fixed tools Makefile to remove encspeed for target clean


*** 20010607_2 by davidt
- Another round of OpenSSL fixes; check for the functions used in hybrid-6,
  not the ones used in hybrid-7, which does it a different way...


*** 20010607_1 by kreator
- fixed OpenSSL support that b0rked in the meantime


*** 20010606_12 by db
another patch by walter campbell
