@@ -1,4 +1,4 @@
-$Id: server-version-info,v 1.3 2000/11/27 04:11:43 lusky Exp $
+$Id: server-version-info,v 1.4 2001/06/06 22:11:05 db Exp $
 Updated for Hybrid 6 (2000/11/26)
 
 When you type /version you will often see something like this:
@@ -18,6 +18,7 @@ here they are:
 'M'	IDLE_FROM_MSG
 'p'	CRYPT_OPER_PASSWORD
 'P'	CRYPT_LINK_PASSWORD
+'T'     IGNORE_BOGUS_TS
 'Y'	USE_SYSLOG
 'Z'	ZIP_LINKS
 
